# AsyncWorker

./: .gitignore  README.md  asyncworker.py  example.py  pyproject.toml  test_asyncworker.py  try.py
AsyncWorker/: asyncworker.py  data_classes.py  worker.py  worker_manager.py
asyncworker/: __init__.py  _data_classes.py  _worker_manager.py  asyncworker.py
