[tool.poetry]
name = "asyncworker"
version = "0.1.0"
description = ""
authors = ["Maffels"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
ipykernel = "^6.17.0"
pytest-asyncio = "^0.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
